# antscan-toolkit

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: workflow.md  workflow.zh-CN.md
docs/maintenance/: release_workflow_zh.md
downloader/: README.md  config.example.toml  pyproject.toml
downloader/src/antscan_downloader/: __main__.py  cli.py  config.py  db.py  discovery.py  downloader.py  exporter.py  http.py  models.py  runtime.py
downloader/tests/: test_discovery.py  test_export_and_cli.py  test_http.py  test_live_smoke.py  test_selection_and_lease.py
renderer/: README.md  batch_manifest.py  detect_black_frames.py  pyproject.toml  pyrightconfig.json  render_stl_views.py  run_batch.py
renderer/manifests/: batch.example.json
renderer/tests/: test_batch_manifest.py  test_blender_smoke.py  test_render_stl_views.py  test_resume.py  test_run_batch_fake_renderer.py  test_run_batch_preflight.py
renderer/tests/fixtures/: sample.stl
skills/antscan_download/: SKILL.md
skills/antscan_render_export/: SKILL.md
