[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antscan-stl-renderer"
version = "0.1.0"
description = "Blender-backed AntScan STL multi-view PNG batch renderer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "Pillow>=10,<12",
    "pytest>=7.4,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
